chap3/y.output
State 8 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | statement

    3 primary_expression: ID
    4                   | NIL
    5                   | INT
    6                   | STRING
    7                   | LPAREN RPAREN
    8                   | LPAREN expression RPAREN

    9 array_expression: ID LBRACK expression RBRACK

   10 postfix_expression: primary_expression
   11                   | array_expression
   12                   | postfix_expression DOT ID
   13                   | postfix_expression LBRACK expression RBRACK
   14                   | postfix_expression LPAREN RPAREN
   15                   | postfix_expression LPAREN argument_list RPAREN

   16 argument_list: expression
   17              | argument_list COMMA expression

   18 unary_expression: postfix_expression
   19                 | MINUS unary_expression

   20 multiplicative_expression: unary_expression
   21                          | multiplicative_expression TIMES unary_expression
   22                          | multiplicative_expression DIVIDE unary_expression

   23 additive_expression: multiplicative_expression
   24                    | additive_expression PLUS multiplicative_expression
   25                    | additive_expression MINUS multiplicative_expression

   26 equality_expression: additive_expression
   27                    | equality_expression EQ additive_expression
   28                    | equality_expression NEQ additive_expression

   29 relational_expression: equality_expression
   30                      | relational_expression LT equality_expression
   31                      | relational_expression GT equality_expression
   32                      | relational_expression LE equality_expression
   33                      | relational_expression GE equality_expression

   34 AND_expression: relational_expression
   35               | AND_expression AND relational_expression

   36 inclusive_OR_expression: AND_expression
   37                        | inclusive_OR_expression OR AND_expression

   38 array_creation: array_expression OF value_expression

   39 struct_creation: ID LBRACE RBRACE
   40                | ID LBRACE field_list RBRACE

   41 field_list: ID EQ expression
   42           | field_list COMMA ID EQ expression

   43 value_expression: inclusive_OR_expression
   44                 | array_creation
   45                 | struct_creation

   46 assignment_expression: value_expression
   47                      | unary_expression ASSIGN value_expression

   48 expression: statement
   49           | assignment_expression
   50           | expression SEMICOLON statement
   51           | expression SEMICOLON assignment_expression

   52 declaration: type_declaration
   53            | var_declaration
   54            | function_declaration

   55 declaration_list: declaration
   56                 | declaration_list declaration

   57 type_declaration: TYPE ID EQ type_definition

   58 type_definition: ID
   59                | LBRACE RBRACE
   60                | LBRACE type_list RBRACE
   61                | ARRAY OF ID

   62 type_list: ID COLON ID
   63          | type_list COMMA ID COLON ID

   64 var_declaration: VAR ID ASSIGN expression
   65                | VAR ID COLON ID ASSIGN expression

   66 function_declaration: FUNCTION ID LPAREN RPAREN EQ expression
   67                     | FUNCTION ID LPAREN RPAREN COLON ID EQ expression
   68                     | FUNCTION ID LPAREN type_list RPAREN EQ expression
   69                     | FUNCTION ID LPAREN type_list RPAREN COLON ID EQ expression

   70 statement: BREAK
   71          | IF expression THEN expression
   72          | IF expression THEN expression ELSE expression
   73          | WHILE expression DO expression
   74          | FOR ID ASSIGN expression TO expression DO expression
   75          | LET declaration_list IN expression END
   76          | LET declaration_list IN END


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 3 9 12 39 40 41 42 57 58 61 62 63 64 65 66 67 68 69 74
STRING (259) 6
INT (260) 5
COMMA (261) 17 42 63
COLON (262) 62 63 65 67 69
SEMICOLON (263) 50 51
LPAREN (264) 7 8 14 15 66 67 68 69
RPAREN (265) 7 8 14 15 66 67 68 69
LBRACK (266) 9 13
RBRACK (267) 9 13
LBRACE (268) 39 40 59 60
RBRACE (269) 39 40 59 60
DOT (270) 12
PLUS (271) 24
MINUS (272) 19 25
TIMES (273) 21
DIVIDE (274) 22
EQ (275) 27 41 42 57 66 67 68 69
NEQ (276) 28
LT (277) 30
LE (278) 32
GT (279) 31
GE (280) 33
AND (281) 35
OR (282) 37
ASSIGN (283) 47 64 65 74
ARRAY (284) 61
IF (285) 71 72
THEN (286) 71 72
ELSE (287) 72
WHILE (288) 73
FOR (289) 74
TO (290) 74
DO (291) 73 74
LET (292) 75 76
IN (293) 75 76
END (294) 75 76
OF (295) 38 61
BREAK (296) 70
NIL (297) 4
FUNCTION (298) 66 67 68 69
VAR (299) 64 65
TYPE (300) 57
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1 2, on right: 0
primary_expression (49)
    on left: 3 4 5 6 7 8, on right: 10
array_expression (50)
    on left: 9, on right: 11 38
postfix_expression (51)
    on left: 10 11 12 13 14 15, on right: 12 13 14 15 18
argument_list (52)
    on left: 16 17, on right: 15 17
unary_expression (53)
    on left: 18 19, on right: 19 20 21 22 47
multiplicative_expression (54)
    on left: 20 21 22, on right: 21 22 23 24 25
additive_expression (55)
    on left: 23 24 25, on right: 24 25 26 27 28
equality_expression (56)
    on left: 26 27 28, on right: 27 28 29 30 31 32 33
relational_expression (57)
    on left: 29 30 31 32 33, on right: 30 31 32 33 34 35
AND_expression (58)
    on left: 34 35, on right: 35 36 37
inclusive_OR_expression (59)
    on left: 36 37, on right: 37 43
array_creation (60)
    on left: 38, on right: 44
struct_creation (61)
    on left: 39 40, on right: 45
field_list (62)
    on left: 41 42, on right: 40 42
value_expression (63)
    on left: 43 44 45, on right: 38 46 47
assignment_expression (64)
    on left: 46 47, on right: 49 51
expression (65)
    on left: 48 49 50 51, on right: 8 9 13 16 17 41 42 50 51 64 65
    66 67 68 69 71 72 73 74 75
declaration (66)
    on left: 52 53 54, on right: 55 56
declaration_list (67)
    on left: 55 56, on right: 56 75 76
type_declaration (68)
    on left: 57, on right: 52
type_definition (69)
    on left: 58 59 60 61, on right: 57
type_list (70)
    on left: 62 63, on right: 60 63 68 69
var_declaration (71)
    on left: 64 65, on right: 53
function_declaration (72)
    on left: 66 67 68 69, on right: 54
statement (73)
    on left: 70 71 72 73 74 75 76, on right: 2 48 50


state 0

    0 $accept: . program $end

    IF     shift, and go to state 1
    WHILE  shift, and go to state 2
    FOR    shift, and go to state 3
    LET    shift, and go to state 4
    BREAK  shift, and go to state 5

    $default  reduce using rule 1 (program)

    program    go to state 6
    statement  go to state 7


state 1

   71 statement: IF . expression THEN expression
   72          | IF . expression THEN expression ELSE expression

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 27
    expression                 go to state 28
    statement                  go to state 29


state 2

   73 statement: WHILE . expression DO expression

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 27
    expression                 go to state 30
    statement                  go to state 29


state 3

   74 statement: FOR . ID ASSIGN expression TO expression DO expression

    ID  shift, and go to state 31


state 4

   75 statement: LET . declaration_list IN expression END
   76          | LET . declaration_list IN END

    FUNCTION  shift, and go to state 32
    VAR       shift, and go to state 33
    TYPE      shift, and go to state 34

    declaration           go to state 35
    declaration_list      go to state 36
    type_declaration      go to state 37
    var_declaration       go to state 38
    function_declaration  go to state 39


state 5

   70 statement: BREAK .

    $default  reduce using rule 70 (statement)


state 6

    0 $accept: program . $end

    $end  shift, and go to state 40


state 7

    2 program: statement .

    $default  reduce using rule 2 (program)


state 8

    3 primary_expression: ID .
    9 array_expression: ID . LBRACK expression RBRACK
   39 struct_creation: ID . LBRACE RBRACE
   40                | ID . LBRACE field_list RBRACE

    LBRACK  shift, and go to state 41
    LBRACE  shift, and go to state 42

    LBRACK    [reduce using rule 3 (primary_expression)]
    $default  reduce using rule 3 (primary_expression)


state 9

    6 primary_expression: STRING .

    $default  reduce using rule 6 (primary_expression)


state 10

    5 primary_expression: INT .

    $default  reduce using rule 5 (primary_expression)


state 11

    7 primary_expression: LPAREN . RPAREN
    8                   | LPAREN . expression RPAREN

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    RPAREN  shift, and go to state 43
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 27
    expression                 go to state 44
    statement                  go to state 29


state 12

   19 unary_expression: MINUS . unary_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression  go to state 14
    array_expression    go to state 46
    postfix_expression  go to state 16
    unary_expression    go to state 47


state 13

    4 primary_expression: NIL .

    $default  reduce using rule 4 (primary_expression)


state 14

   10 postfix_expression: primary_expression .

    $default  reduce using rule 10 (postfix_expression)


state 15

   11 postfix_expression: array_expression .
   38 array_creation: array_expression . OF value_expression

    OF  shift, and go to state 48

    $default  reduce using rule 11 (postfix_expression)


state 16

   12 postfix_expression: postfix_expression . DOT ID
   13                   | postfix_expression . LBRACK expression RBRACK
   14                   | postfix_expression . LPAREN RPAREN
   15                   | postfix_expression . LPAREN argument_list RPAREN
   18 unary_expression: postfix_expression .

    LPAREN  shift, and go to state 49
    LBRACK  shift, and go to state 50
    DOT     shift, and go to state 51

    $default  reduce using rule 18 (unary_expression)


state 17

   20 multiplicative_expression: unary_expression .
   47 assignment_expression: unary_expression . ASSIGN value_expression

    ASSIGN  shift, and go to state 52

    $default  reduce using rule 20 (multiplicative_expression)


state 18

   21 multiplicative_expression: multiplicative_expression . TIMES unary_expression
   22                          | multiplicative_expression . DIVIDE unary_expression
   23 additive_expression: multiplicative_expression .

    TIMES   shift, and go to state 53
    DIVIDE  shift, and go to state 54

    $default  reduce using rule 23 (additive_expression)


state 19

   24 additive_expression: additive_expression . PLUS multiplicative_expression
   25                    | additive_expression . MINUS multiplicative_expression
   26 equality_expression: additive_expression .

    PLUS   shift, and go to state 55
    MINUS  shift, and go to state 56

    $default  reduce using rule 26 (equality_expression)


state 20

   27 equality_expression: equality_expression . EQ additive_expression
   28                    | equality_expression . NEQ additive_expression
   29 relational_expression: equality_expression .

    EQ   shift, and go to state 57
    NEQ  shift, and go to state 58

    $default  reduce using rule 29 (relational_expression)


state 21

   30 relational_expression: relational_expression . LT equality_expression
   31                      | relational_expression . GT equality_expression
   32                      | relational_expression . LE equality_expression
   33                      | relational_expression . GE equality_expression
   34 AND_expression: relational_expression .

    LT  shift, and go to state 59
    LE  shift, and go to state 60
    GT  shift, and go to state 61
    GE  shift, and go to state 62

    $default  reduce using rule 34 (AND_expression)


state 22

   35 AND_expression: AND_expression . AND relational_expression
   36 inclusive_OR_expression: AND_expression .

    AND  shift, and go to state 63

    $default  reduce using rule 36 (inclusive_OR_expression)


state 23

   37 inclusive_OR_expression: inclusive_OR_expression . OR AND_expression
   43 value_expression: inclusive_OR_expression .

    OR  shift, and go to state 64

    $default  reduce using rule 43 (value_expression)


state 24

   44 value_expression: array_creation .

    $default  reduce using rule 44 (value_expression)


state 25

   45 value_expression: struct_creation .

    $default  reduce using rule 45 (value_expression)


state 26

   46 assignment_expression: value_expression .

    $default  reduce using rule 46 (assignment_expression)


state 27

   49 expression: assignment_expression .

    $default  reduce using rule 49 (expression)


state 28

   50 expression: expression . SEMICOLON statement
   51           | expression . SEMICOLON assignment_expression
   71 statement: IF expression . THEN expression
   72          | IF expression . THEN expression ELSE expression

    SEMICOLON  shift, and go to state 65
    THEN       shift, and go to state 66


state 29

   48 expression: statement .

    $default  reduce using rule 48 (expression)


state 30

   50 expression: expression . SEMICOLON statement
   51           | expression . SEMICOLON assignment_expression
   73 statement: WHILE expression . DO expression

    SEMICOLON  shift, and go to state 65
    DO         shift, and go to state 67


state 31

   74 statement: FOR ID . ASSIGN expression TO expression DO expression

    ASSIGN  shift, and go to state 68


state 32

   66 function_declaration: FUNCTION . ID LPAREN RPAREN EQ expression
   67                     | FUNCTION . ID LPAREN RPAREN COLON ID EQ expression
   68                     | FUNCTION . ID LPAREN type_list RPAREN EQ expression
   69                     | FUNCTION . ID LPAREN type_list RPAREN COLON ID EQ expression

    ID  shift, and go to state 69


state 33

   64 var_declaration: VAR . ID ASSIGN expression
   65                | VAR . ID COLON ID ASSIGN expression

    ID  shift, and go to state 70


state 34

   57 type_declaration: TYPE . ID EQ type_definition

    ID  shift, and go to state 71


state 35

   55 declaration_list: declaration .

    $default  reduce using rule 55 (declaration_list)


state 36

   56 declaration_list: declaration_list . declaration
   75 statement: LET declaration_list . IN expression END
   76          | LET declaration_list . IN END

    IN        shift, and go to state 72
    FUNCTION  shift, and go to state 32
    VAR       shift, and go to state 33
    TYPE      shift, and go to state 34

    declaration           go to state 73
    type_declaration      go to state 37
    var_declaration       go to state 38
    function_declaration  go to state 39


state 37

   52 declaration: type_declaration .

    $default  reduce using rule 52 (declaration)


state 38

   53 declaration: var_declaration .

    $default  reduce using rule 53 (declaration)


state 39

   54 declaration: function_declaration .

    $default  reduce using rule 54 (declaration)


state 40

    0 $accept: program $end .

    $default  accept


state 41

    9 array_expression: ID LBRACK . expression RBRACK

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 27
    expression                 go to state 74
    statement                  go to state 29


state 42

   39 struct_creation: ID LBRACE . RBRACE
   40                | ID LBRACE . field_list RBRACE

    ID      shift, and go to state 75
    RBRACE  shift, and go to state 76

    field_list  go to state 77


state 43

    7 primary_expression: LPAREN RPAREN .

    $default  reduce using rule 7 (primary_expression)


state 44

    8 primary_expression: LPAREN expression . RPAREN
   50 expression: expression . SEMICOLON statement
   51           | expression . SEMICOLON assignment_expression

    SEMICOLON  shift, and go to state 65
    RPAREN     shift, and go to state 78


state 45

    3 primary_expression: ID .
    9 array_expression: ID . LBRACK expression RBRACK

    LBRACK  shift, and go to state 41

    LBRACK    [reduce using rule 3 (primary_expression)]
    $default  reduce using rule 3 (primary_expression)


state 46

   11 postfix_expression: array_expression .

    $default  reduce using rule 11 (postfix_expression)


state 47

   19 unary_expression: MINUS unary_expression .

    $default  reduce using rule 19 (unary_expression)


state 48

   38 array_creation: array_expression OF . value_expression

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 80


state 49

   14 postfix_expression: postfix_expression LPAREN . RPAREN
   15                   | postfix_expression LPAREN . argument_list RPAREN

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    RPAREN  shift, and go to state 81
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    argument_list              go to state 82
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 27
    expression                 go to state 83
    statement                  go to state 29


state 50

   13 postfix_expression: postfix_expression LBRACK . expression RBRACK

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 27
    expression                 go to state 84
    statement                  go to state 29


state 51

   12 postfix_expression: postfix_expression DOT . ID

    ID  shift, and go to state 85


state 52

   47 assignment_expression: unary_expression ASSIGN . value_expression

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 86


state 53

   21 multiplicative_expression: multiplicative_expression TIMES . unary_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression  go to state 14
    array_expression    go to state 46
    postfix_expression  go to state 16
    unary_expression    go to state 87


state 54

   22 multiplicative_expression: multiplicative_expression DIVIDE . unary_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression  go to state 14
    array_expression    go to state 46
    postfix_expression  go to state 16
    unary_expression    go to state 88


state 55

   24 additive_expression: additive_expression PLUS . multiplicative_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 46
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 89


state 56

   25 additive_expression: additive_expression MINUS . multiplicative_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 46
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 90


state 57

   27 equality_expression: equality_expression EQ . additive_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 46
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 18
    additive_expression        go to state 91


state 58

   28 equality_expression: equality_expression NEQ . additive_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 46
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 18
    additive_expression        go to state 92


state 59

   30 relational_expression: relational_expression LT . equality_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 46
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 93


state 60

   32 relational_expression: relational_expression LE . equality_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 46
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 94


state 61

   31 relational_expression: relational_expression GT . equality_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 46
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 95


state 62

   33 relational_expression: relational_expression GE . equality_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 46
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 96


state 63

   35 AND_expression: AND_expression AND . relational_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 46
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 97


state 64

   37 inclusive_OR_expression: inclusive_OR_expression OR . AND_expression

    ID      shift, and go to state 45
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 46
    postfix_expression         go to state 16
    unary_expression           go to state 79
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 98


state 65

   50 expression: expression SEMICOLON . statement
   51           | expression SEMICOLON . assignment_expression

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 99
    statement                  go to state 100


state 66

   71 statement: IF expression THEN . expression
   72          | IF expression THEN . expression ELSE expression

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 27
    expression                 go to state 101
    statement                  go to state 29


state 67

   73 statement: WHILE expression DO . expression

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 27
    expression                 go to state 102
    statement                  go to state 29


state 68

   74 statement: FOR ID ASSIGN . expression TO expression DO expression

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 27
    expression                 go to state 103
    statement                  go to state 29


state 69

   66 function_declaration: FUNCTION ID . LPAREN RPAREN EQ expression
   67                     | FUNCTION ID . LPAREN RPAREN COLON ID EQ expression
   68                     | FUNCTION ID . LPAREN type_list RPAREN EQ expression
   69                     | FUNCTION ID . LPAREN type_list RPAREN COLON ID EQ expression

    LPAREN  shift, and go to state 104


state 70

   64 var_declaration: VAR ID . ASSIGN expression
   65                | VAR ID . COLON ID ASSIGN expression

    COLON   shift, and go to state 105
    ASSIGN  shift, and go to state 106


state 71

   57 type_declaration: TYPE ID . EQ type_definition

    EQ  shift, and go to state 107


state 72

   75 statement: LET declaration_list IN . expression END
   76          | LET declaration_list IN . END

    ID      shift, and go to state 8
    STRING  shift, and go to state 9
    INT     shift, and go to state 10
    LPAREN  shift, and go to state 11
    MINUS   shift, and go to state 12
    IF      shift, and go to state 1
    WHILE   shift, and go to state 2
    FOR     shift, and go to state 3
    LET     shift, and go to state 4
    END     shift, and go to state 108
    BREAK   shift, and go to state 5
    NIL     shift, and go to state 13

    primary_expression         go to state 14
    array_expression           go to state 15
    postfix_expression         go to state 16
    unary_expression           go to state 17
    multiplicative_expression  go to state 18
    additive_expression        go to state 19
    equality_expression        go to state 20
    relational_expression      go to state 21
    AND_expression             go to state 22
    inclusive_OR_expression    go to state 23
    array_creation             go to state 24
    struct_creation            go to state 25
    value_expression           go to state 26
    assignment_expression      go to state 27
    expression                 go to state 109
    statement                  go to state 29


state 73

   56 declaration_list: declaration_list declaration .

    $default  reduce using rule 56 (declaration_list)


state 74

    9 array_expression: ID LBRACK expression . RBRACK
   50 expression: expression . SEMICOLON statement
   51           | expression . SEMICOLON assignment_expression

    SEMICOLON  shift, and go to state 65
    RBRACK     shift, and go to state 110


state 75

   41 field_list: ID . EQ expression

    EQ  shift, and go to state 111


state 76

   39 struct_creation: ID LBRACE RBRACE .

    $default  reduce using rule 39 (struct_creation)


state 77

   40 struct_creation: ID LBRACE field_list . RBRACE
   42 field_list: field_list . COMMA ID EQ expression

    COMMA   shift, and go to state 112
    RBRACE  shift, and go to state 113

